RESOLVED FIXED203133
[ASAN] Fix WebGPU tests after r250258
https://bugs.webkit.org/show_bug.cgi?id=203133
Summary [ASAN] Fix WebGPU tests after r250258
Devin Rousso
Reported 2019-10-17 21:06:59 PDT
``` ASAN=YES make debug ASAN=YES run-webkit-tests --debug --time-out-ms=100000 --exit-after-n-failures=1 LayoutTests/webgpu/ ``` Eventually, one of the tests will fail and result in a "attempting free on address which was not malloc()-ed".
Attachments
Patch (25.46 KB, patch)
2019-10-17 21:10 PDT, Devin Rousso
joepeck: review+
Patch (25.38 KB, patch)
2019-10-18 16:09 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2019-10-17 21:07:14 PDT
Devin Rousso
Comment 2 2019-10-17 21:10:15 PDT
Joseph Pecoraro
Comment 3 2019-10-18 15:43:39 PDT
Comment on attachment 381266 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=381266&action=review r=me > Source/WebCore/platform/graphics/gpu/GPUObjectBase.h:43 > + Bad newline.
Devin Rousso
Comment 4 2019-10-18 16:09:57 PDT
WebKit Commit Bot
Comment 5 2019-10-18 17:44:35 PDT
Comment on attachment 381341 [details] Patch Clearing flags on attachment: 381341 Committed r251315: <https://trac.webkit.org/changeset/251315>
WebKit Commit Bot
Comment 6 2019-10-18 17:44:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.